operations on the restaurants added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 jwt.secret=mF12aR8@hYf6!R3dLg7#Tn9%Wk4*Pq
-jwt.expiration=3600000 # Token expiration in milliseconds (1 hour)
+jwt.expiration=36000000
 
-# Server Configuration
 server.port=8080
