--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ jwt.secret=mF12aR8@hYf6!R3dLg7#Tn9%Wk4*Pq
 jwt.expiration=36000000
 
 server.port=8080
+
+spring.jpa.properties.hibernate.format_sql=true
+
+
