--- a/pom.xml
+++ b/pom.xml
@@ -88,8 +88,12 @@
 				<artifactId>jaxb-runtime</artifactId>
 				<version>2.3.3</version>
 			</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
