--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,17 @@
 spring.application.name=lead-management-system
-spring.datasource.url=jdbc:postgresql://localhost:5432/kam_system
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-jwt.secret=mF12aR8@hYf6!R3dLg7#Tn9%Wk4*Pq
-jwt.expiration=36000000
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
 
-server.port=8080
+server.port=${SERVER_PORT:8080}
 
 spring.jpa.properties.hibernate.format_sql=true
 
-
-spring.ai.ollama.base-url=http://localhost:11434
-spring.ai.ollama.chat.options.model=llama3.2:1b
+spring.ai.ollama.base-url=${OLLAMA_BASE_URL}
+spring.ai.ollama.chat.options.model=${OLLAMA_MODEL}
